--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,9 +9,8 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      USER_CODE_PATH: /home/src/${PROJECT_NAME}
-      METADATA_PATH=${METADATA_PATH}
-      # PostgreSQL environment variables are removed
+      - USER_CODE_PATH=/home/src/${PROJECT_NAME}
+      - METADATA_PATH=${METADATA_PATH}
     ports:
       - 6789:6789
     volumes:
