--- a/docker/DOCKERFILE
+++ b/docker/DOCKERFILE
@@ -11,6 +11,8 @@ RUN wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform
 ARG TERRAFORM_WORKDIR=/terraform
 WORKDIR ${TERRAFORM_WORKDIR}
 
+COPY ./mage
+
 # Copy Terraform configuration into the container
 COPY . ${TERRAFORM_WORKDIR}
 
