--- a/docker/DOCKERFILE
+++ b/docker/DOCKERFILE
@@ -1,45 +1,8 @@
 FROM mageai/mageai:latest
 
-# Install Terraform
-ARG TERRAFORM_VERSION=1.1.0
-RUN wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
-    unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && \
-    mv terraform /usr/local/bin/ && \
-    rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+ARG USER_CODE_PATH=/home/src/${PROJECT_NAME}
 
-# Set the working directory for Terraform
-ARG TERRAFORM_WORKDIR=/terraform
-WORKDIR ${TERRAFORM_WORKDIR}
+COPY requirements.txt ${USER_CODE_PATH}requirements.txt 
 
-#COPY ./mage /home/src
-
-# Copy Terraform configuration into the container
-COPY . ${TERRAFORM_WORKDIR}
-
-# Copy Google Cloud credentials file for Cloud storage and BigQuery
-COPY keys/gcp.json /home/src/keys/gcp.json
-
-# Copy Kaggle credentials file to be able to download the dataset with Mage
-COPY keys/kaggle.json /home/src/keys/kaggle.json
-
-# Install dbt
-RUN pip3 install dbt
-
-# Install Kaggle API
-RUN pip3 install kaggle
-
-# Clean up
-RUN apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Copy entrypoint script
-COPY entrypoint.sh /terraform/entrypoint.sh
-
-# Set entrypoint script as executable
-RUN chmod +x /terraform/entrypoint.sh
-
-# Entry point for running Terraform commands
-ENTRYPOINT ["/bin/bash", "/terraform/entrypoint.sh"]
-
-# Default command
-CMD ["--version"]
+RUN pip install --upgrade pip
+RUN pip3 install -r ${USER_CODE_PATH}requirements.txt
