--- a/mage/docker-compose.yml
+++ b/mage/docker-compose.yml
@@ -14,5 +14,5 @@ services:
       - 6789:6789
     volumes:
       - .:/home/src/
-      - ./keys/:/home/src/keys/
+     # - ./keys/:/home/src/keys/
     restart: on-failure:5
