--- a/mage/DOCKERFILE
+++ b/mage/DOCKERFILE
@@ -1,9 +1,12 @@
 FROM mageai/mageai:latest
 
-ARG USER_CODE_PATH=/home/src/${PROJECT_NAME}
+ARG USER_CODE_PATH=/home/src/mage/${MAGE_PROJECT_NAME}
 
-# Note: this overwrites the requirements.txt file in your new project on first run. 
-# You can delete this line for the second run :) 
-COPY requirements.txt ${USER_CODE_PATH}/requirements.txt 
+# Set working directory
+WORKDIR ${USER_CODE_PATH}
 
-RUN pip3 install -r ${USER_CODE_PATH}/requirements.txt
+# Copy the requirements.txt file from the build context into the docker container
+COPY requirements.txt .
+
+# Install requirements.txt into your MAGE docker environment for use in your project 
+RUN pip3 install -r requirements.txt
