--- a/mage/docker-compose.yml
+++ b/mage/docker-compose.yml
@@ -1,15 +1,13 @@
 version: '3'
 services:
-  magic:
-    image: mageai/mageai:latest
-    command: mage start ${PROJECT_NAME}
+ mage:
+    build:
+      context: ./mage/
+      dockerfile: Dockerfile
+    container_name: mage
+    command: mage start /home/src/mage/${MAGE_PROJECT_NAME}
     env_file:
       - .env
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      USER_CODE_PATH: /home/src/${PROJECT_NAME}
     ports:
       - 6789:6789
     volumes:
