--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     container_name: mage
     command: mage start /home/src/mage/${PROJECT_NAME}
     env_file:
-      - .env
+      - ./mage/.env
     ports:
       - 6789:6789
     volumes:
